--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body></body>
-    <table>
+    <table width="100%">
         <tbody>
             <trow>
                 <td valign="top">
