--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -1,27 +1,27 @@
 <html>
     <head></head>
-    <body></body>
+    <body>
     <table width="100%">
         <tbody>
             <trow>
                 <td valign="top">
                     <ul>
                         <li><a href="/Kanbas/Account/Navigation/index.html">Account</a></li>
-                        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
+                        <li><a href="#">Dashboard</a></li>
                         <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                        <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                        <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                        <li><a href="/Kanbas/History/index.html">History</a></li>
-                        <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                        <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                        <li><a href="/Kanbas/Help/index.html">Help</a></li>
+                        <li><a href="#">Calendar</a></li>
+                        <li><a href="#">Inbox</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Studio</a></li>
+                        <li><a href="#">Commons</a></li>
+                        <li><a href="#">Help</a></li>
                     </ul>
                 </td>
                 <td valign="top">
                     <ul>
                         <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-                        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-                        <li><a href="/Kanbas/Courses/Piazza/index.html">Piazza</a></li>
+                        <li><a href="#">Modules</a></li>
+                        <li><a href="#">Piazza</a></li>
                         <li><a href="#">Zoom Meetings</a></li>
                         <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
                         <li><a href="#">Quizzes</a></li>
@@ -130,4 +130,5 @@
             </trow>
         </tbody>
     </table>
+</body>
 </html>
