--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -3,8 +3,8 @@
     <body>
         <ul>
             <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-            <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-            <li><a href="/Kanbas/Courses/Piazza/index.html">Piazza</a></li>
+            <li><a href="#">Modules</a></li>
+            <li><a href="#">Piazza</a></li>
             <li><a href="#">Zoom Meetings</a></li>
             <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
             <li><a href="#">Quizzes</a></li>
