--- a/public/Kanbas/Account/Profile/Edit/index.html
+++ b/public/Kanbas/Account/Profile/Edit/index.html
@@ -7,7 +7,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <label>Name:</label>
+                        <label>Name:*</label>
                         <input type="text" value="Grace Lemelin"/>
                     </td>
                     <td>
