--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -74,7 +74,9 @@
                             <input placeholder="Search Assignments"/>
                         </form>
                 
-                        <button>Apply Filters</button>
+                        <form>
+                            <button>Apply Filters</button>
+                        </form>
 
                         <table border="1" width="100%">
                             <thead>
