--- a/public/Kanbas/Account/Profile/index.html
+++ b/public/Kanbas/Account/Profile/index.html
@@ -1,6 +1,8 @@
 <html>
-    <head>Grace Lemelin's Profile</head>
+    <head></head>
     <body>
+        Grace Lemelin's Profile
+        <hr>
         <table width="100%">
             <tbody>
                 <tr>
@@ -8,19 +10,19 @@
                         <h2>Grace Lemelin</h2>
                     </td>
                     <td valign="top">
-                        <button>Edit Profile</button>
+                        <a href="/Kanbas/Account/Profile/Edit/screen.html"><button>Edit Profile</button></a>
                     </td>
                 </tr>
             </tbody>
         </table>
 
         <h3>Contact</h3>
-        No registered services, you can add some on the settings page.
+        No registered services, you can add some on the <a href="#">Settings</a> page.
 
         <h3>Biography</h3>
         Student, Software Engineer, Project Management
 
         <h3>Links</h3>
-        <a href="#">YouTube</a>
+        <a href="https://youtube.com">YouTube</a>
     </body>
 </html>
