--- a/public/Kanbas/Courses/Assignments/index.html
+++ b/public/Kanbas/Courses/Assignments/index.html
@@ -27,114 +27,79 @@
             </tbody>
         </table>
 
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <h3>Assignments 40% of Total</h3>
-                        <ul>
-                            <li><a href="#">A1</a> | Not Available Yet</li>
-                            <li><a href="#">A2</a> | Not Available Yet</li>
-                            <li><a href="#">A3</a> | Not Available Yet</li>
-                            <li><a href="#">A4</a> | Not Available Yet</li>
-                            <li><a href="#">A5</a> | Not Available Yet</li>
-                            <li><a href="#">A6</a> | Not Available Yet</li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <select>
-                            <option>Edit</option>
-                            <option>Speed Grader</option>
-                            <option>Duplicate</option>
-                            <option>Delete</option>
-                            <option>Move To...</option>
-                            <option>Send To...</option>
-                            <option>Copy To...</option>
-                            <option>Share to Commons</option>
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <b>Assignments 40% of Total</b>
+        <select>
+            <option>Edit</option>
+            <option>Speed Grader</option>
+            <option>Duplicate</option>
+            <option>Delete</option>
+            <option>Move To...</option>
+            <option>Send To...</option>
+            <option>Copy To...</option>
+            <option>Share to Commons</option>
+        </select>
+        <br/>
+        <ul>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A1</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A2</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A3</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A4</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A5</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">A6</a> | Not Available Yet</li>
+        </ul>
 
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <h3>Quizzes 10% of Total</h3>
-                        <ul>
-                            <li><a href="#">Q1</a> | Not Available Yet</li>
-                            <li><a href="#">Q2</a> | Not Available Yet</li>
-                            <li><a href="#">Q3</a> | Not Available Yet</li>
-                            <li><a href="#">Q4</a> | Not Available Yet</li>
-                            <li><a href="#">Q5</a> | Not Available Yet</li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <select>
-                            <option>Edit</option>
-                            <option>Speed Grader</option>
-                            <option>Duplicate</option>
-                            <option>Delete</option>
-                            <option>Move To...</option>
-                            <option>Send To...</option>
-                            <option>Copy To...</option>
-                            <option>Share to Commons</option>
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <b>Quizzes 10% of Total</b>
+        <select>
+            <option>Edit</option>
+            <option>Speed Grader</option>
+            <option>Duplicate</option>
+            <option>Delete</option>
+            <option>Move To...</option>
+            <option>Send To...</option>
+            <option>Copy To...</option>
+            <option>Share to Commons</option>
+        </select>
+        <br/>
+        <ul>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Q1</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Q2</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Q3</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Q4</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Q5</a> | Not Available Yet</li>
+        </ul>
 
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <h3>Exams 20% of Total</h3>
-                        <ul>
-                            <li><a href="#">Midterm</a> | Not Available Yet</li>
-                            <li><a href="#">Final</a> | Not Available Yet</li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <select>
-                            <option>Edit</option>
-                            <option>Speed Grader</option>
-                            <option>Duplicate</option>
-                            <option>Delete</option>
-                            <option>Move To...</option>
-                            <option>Send To...</option>
-                            <option>Copy To...</option>
-                            <option>Share to Commons</option>
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <b>Exams 20% of Total</b>
+        <select>
+            <option>Edit</option>
+            <option>Speed Grader</option>
+            <option>Duplicate</option>
+            <option>Delete</option>
+            <option>Move To...</option>
+            <option>Send To...</option>
+            <option>Copy To...</option>
+            <option>Share to Commons</option>
+        </select>
+        <ul>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Midterm</a> | Not Available Yet</li>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Final</a> | Not Available Yet</li>
+        </ul>
 
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <h3>Project 30% of Total</h3>
-                        <ul>
-                            <li><a href="#">Project</a> | Not Yet Available</li>
-                        </ul>
-                    </td>
-                    <td  valign="top">
-                        <select>
-                            <option>Edit</option>
-                            <option>Speed Grader</option>
-                            <option>Duplicate</option>
-                            <option>Delete</option>
-                            <option>Move To...</option>
-                            <option>Send To...</option>
-                            <option>Copy To...</option>
-                            <option>Share to Commons</option>
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <br/>
+
+        <b>Project 30% of Total</b>
+        <select>
+            <option>Edit</option>
+            <option>Speed Grader</option>
+            <option>Duplicate</option>
+            <option>Delete</option>
+            <option>Move To...</option>
+            <option>Send To...</option>
+            <option>Copy To...</option>
+            <option>Share to Commons</option>
+        </select>
+        <ul>
+            <li><a href="/Kanbas/Courses/Assignments/Edit/screen.html">Project</a> | Not Yet Available</li>
+        </ul>
+
     </body>
 </html>
