did course nav bar

--- a/public/Kanbas/Dashboard/index.html
+++ b/public/Kanbas/Dashboard/index.html
@@ -32,7 +32,7 @@
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
                                 CS5678 Computer Systems</a>
-                            <p class="card-text">Full Stack software developer</p>
+                            <p class="card-text">Learning Computer Systems</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
@@ -44,8 +44,8 @@
                         <div class="card-body">
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
-                                CS9012 Linear Algebra</a>
-                            <p class="card-text">Full Stack software developer</p>
+                                MATH9012 Linear Algebra</a>
+                            <p class="card-text">Matrices, Vectors, & Equations</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
@@ -57,8 +57,8 @@
                         <div class="card-body">
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
-                                CS3456 Object Oriented Design</a>
-                            <p class="card-text">Full Stack software developer</p>
+                                CS3456 OOD</a>
+                            <p class="card-text">Object Oriented Design</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
@@ -66,12 +66,12 @@
 
                 <div class="col" style="width: 300px">
                     <div class="card">
-                        <img src="/images/algo.jpeg" class="card-img-top" style="max-height: 150px" />
+                        <img src="/images/aad.webp" class="card-img-top" style="max-height: 150px" />
                         <div class="card-body">
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
-                                CS7890 Algorithms and Data</a>
-                            <p class="card-text">Full Stack software developer</p>
+                                CS7890 Algorithms</a>
+                            <p class="card-text">Algorithms and Data Structures</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
@@ -83,8 +83,8 @@
                         <div class="card-body">
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
-                                CS1357 Foundations of Data Science</a>
-                            <p class="card-text">Full Stack software developer</p>
+                                DS1357 Foundations of DS</a>
+                            <p class="card-text">Foundations of Data Science</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
@@ -96,8 +96,8 @@
                         <div class="card-body">
                             <a class="card-title" href="/Kanbas/Courses/Home/screen.html"
                                 style="text-decoration: none; color: navy; font-weight: bold">
-                                CS2468 Human Computer Interaction</a>
-                            <p class="card-text">Full Stack software developer</p>
+                                IS2468 HCI</a>
+                            <p class="card-text">Human Computer Interaction</p>
                             <a html="#" class="btn btn-primary"> Go </a>
                         </div>
                     </div>
