--- a/public/Kanbas/Account/Profile/Edit/screen.html
+++ b/public/Kanbas/Account/Profile/Edit/screen.html
@@ -12,8 +12,8 @@
                     <ul>
                         <ul class="wd-kanbas-navigation">
                             <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon"/></a></li>
-                            <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
-                            <li class="wd-active"><a href="#"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+                            <li class="wd-active"><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
+                            <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
                             <li><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
                             <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
                             <li><a href="#"><i class="fa fa-inbox"></i><br/>Inbox</a></li>
