--- a/public/Kanbas/Courses/Assignments/Edit/screen.html
+++ b/public/Kanbas/Courses/Assignments/Edit/screen.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="/Kanbas/styles.css"/>
         <link rel="stylesheet" href="/Kanbas/Navigation/index.css"/>
         <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css"/>
     </head>
     <body>
         <table width="100%">
@@ -12,7 +13,7 @@
                         <ul class="wd-kanbas-navigation">
                             <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon"/></a></li>
                             <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
-                            <li><a href="#"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+                            <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
                             <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
                             <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
                             <li><a href="#"><i class="fa fa-inbox"></i><br/>Inbox</a></li>
@@ -23,12 +24,12 @@
                         </ul>
                     </td>
                     <td valign="top">
-                        <ul>
+                        <ul class="wd-navigation">
                             <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
                             <li><a href="#">Modules</a></li>
-                            <li><a href="#">Piazza</a></li>
-                            <li><a href="#">Zoom Meetings</a></li>
-                            <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+                            <li><a href="http://piazza.com">Piazza</a></li>
+                            <li><a href="#">Zoom</a></li>
+                            <li class="wd-active"><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
                             <li><a href="#">Quizzes</a></li>
                             <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
                             <li><a href="#">People</a></li>
