--- a/public/Kanbas/Courses/Modules/index.html
+++ b/public/Kanbas/Courses/Modules/index.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
   </head>
   <body>
-    <button>Collapse All</button>
-    <button>View Progress</button>
+    <button class="button">Collapse All</button>
+    <button class="button">View Progress</button>
     <select>
         <option>Publish All</option>
         <option>Publish All Modules and Items</option>
         <option>Publish Modules Only</option>
         <option>Unpublish All Modules</option>
     </select>
-    <button>+ Module</button>
+    <button class="button">+ Module</button>
     <ul class="list-group wd-modules">
       <li class="list-group-item">
         <div>
