--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -62,7 +62,24 @@
       </ul>
     </div>
 
-    <div class="d-none d-md-block">
+    <div class="row">
+
+    <div class="row">
+      <div class="col ps-5 pt-3">
+        <a href="#"><i class="fa fa-bars fa-lg" style="color: red; float: left;"></i></a>
+        &nbsp
+        <span>CS1234</span>
+        <span>></span>
+        <span>Modules</span>
+        
+      </div>
+      
+
+    </div>
+
+    <hr>
+
+    <div class="col-2 d-none d-md-block">
       <ul class="wd-navigation">
         <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
         <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
@@ -85,7 +102,7 @@
       </ul>
     </div>
 
-    <div class="flex-fill">
+    <div class="col-10 flex-fill">
     <button class="button">Collapse All</button>
     <button class="button">View Progress</button>
     <select>
@@ -152,6 +169,8 @@
         </li>
       </ul>
     </div>
+
+  </div>
 
     <div class="flex-grow-0 me-2 d-none d-xl-block" style="width: 225px;">
       <h2>Course Status</h2>
