--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -27,7 +27,7 @@
                     <td valign="top">
                         <ul class="wd-navigation">
                             <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-                            <li><a href="#">Modules</a></li>
+                            <li><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
                             <li><a href="http://piazza.com">Piazza</a></li>
                             <li><a href="#">Zoom</a></li>
                             <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
