--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -8,46 +8,37 @@
   <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
   <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.css" />
 </head>
+
 <body>
 
   <div class="d-block d-md-none">
-    <nav
-      class="navbar bg-dark border-bottom border-body"
-      data-bs-theme="dark"
-    >
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
 
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        </button> -->
+
+        <a class="navbar-toggler" type="button" data-bs-toggle="collapse" href="#collapseExample" role="option"
+          aria-expanded="false" aria-controls="collapseExample">
+
+          <span class="navbar-toggler-icon"></span>
+        </a>
 
         <a class="navbar-brand" href="#">Navbar</a>
 
-        <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggler="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="fa fa-chevron-down"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggler="collapse"
+          data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="fa fa-chevron-down"></span>
+        </button>
       </div>
     </nav>
+
   </div>
 
   <div class="d-flex">
-    <div class="d-none d-md-block">
+    <div class="d-none d-md-block me-1">
       <ul class="wd-kanbas-navigation">
         <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon" /></a></li>
         <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
@@ -64,138 +55,161 @@
 
     <div class="row">
 
-    <div class="row">
-      <div class="col ps-5 pt-3">
-        <a href="#"><i class="fa fa-bars fa-lg" style="color: red; float: left;"></i></a>
-        &nbsp
-        <span>CS1234</span>
-        <span>></span>
-        <span>Modules</span>
-        
+      <div class="row d-none d-md-block">
+        <div class="col ps-5 pt-3">
+          <a href="#"><i class="fa fa-bars fa-lg" style="color: red; float: left;"></i></a>
+          &nbsp
+          <span style="color: red;">CS1234</span>
+          <span style="color: darkgrey;">></span>
+          <span>Modules</span>
+
+          <button class="float-end" style="border-radius: 4px;">Student View</button>
+        </div>
+
       </div>
-      
+
+      <hr>
+
+      <div class="col-2 d-none d-md-block">
+        <span style="color:darkgrey;">1234.5678</span>
+        <ul class="wd-navigation">
+          <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+          <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
+          <li><a href="http://piazza.com">Piazza</a></li>
+          <li><a href="#">Zoom</a></li>
+          <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+          <li><a href="#">Quizzes</a></li>
+          <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+          <li><a href="#">People</a></li>
+          <li><a href="#">Panopto Video</a></li>
+          <li><a href="#">Discussions</a></li>
+          <li><a href="#">Announcements</a></li>
+          <li><a href="#">Pages</a></li>
+          <li><a href="#">Files</a></li>
+          <li><a href="#">Rubrics</a></li>
+          <li><a href="#">Outcomes</a></li>
+          <li><a href="#">Collaborations</a></li>
+          <li><a href="#">Syllabus</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>
+
+      <div class="col-10">
+        <div class="justify-content-end">
+          <button class="button">Collapse All</button>
+          <button class="button">View Progress</button>
+          <select>
+            <option>Publish All</option>
+            <option>Publish All Modules and Items</option>
+            <option>Publish Modules Only</option>
+            <option>Unpublish All Modules</option>
+          </select>
+          <button class="button" style="background-color: red; color: white;">+ Module</button>
+          <button class="button"><i class="fa fa-ellipsis-v fa-xl"></i></button>
+        </div>
+
+        <hr>
+
+        <ul class="list-group wd-modules">
+          <li class="list-group-item">
+            <div>
+              <i class="fa fa-ellipsis-v"></i> Week 1
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-plus ms-2"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> Learning Objectives
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+              </li>
+
+              <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> Reading
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+              </li>
+            </ul>
+          </li>
+          <li class="list-group-item">
+            <div>
+              <i class="fa fa-ellipsis-v"></i> Week 2
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-plus ms-2"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+            </div>
+
+            <ul class="list-group">
+              <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> Learning Objectives
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+              </li>
+
+              <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> Reading
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+              </li>
+          </li>
+        </ul>
+      </div>
 
     </div>
 
-    <hr>
-
-    <div class="col-2 d-none d-md-block">
-      <ul class="wd-navigation">
-        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
-        <li><a href="http://piazza.com">Piazza</a></li>
-        <li><a href="#">Zoom</a></li>
-        <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
-        <li><a href="#">Quizzes</a></li>
-        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-        <li><a href="#">People</a></li>
-        <li><a href="#">Panopto Video</a></li>
-        <li><a href="#">Discussions</a></li>
-        <li><a href="#">Announcements</a></li>
-        <li><a href="#">Pages</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Rubrics</a></li>
-        <li><a href="#">Outcomes</a></li>
-        <li><a href="#">Collaborations</a></li>
-        <li><a href="#">Syllabus</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-    </div>
-
-    <div class="col-10 flex-fill">
-    <button class="button">Collapse All</button>
-    <button class="button">View Progress</button>
-    <select>
-        <option>Publish All</option>
-        <option>Publish All Modules and Items</option>
-        <option>Publish Modules Only</option>
-        <option>Unpublish All Modules</option>
-    </select>
-    <button class="button">+ Module</button>
-      <ul class="list-group wd-modules">
-        <li class="list-group-item">
-          <div>
-            <i class="fa fa-ellipsis-v"></i> Week 1
-            <span class="float-end">
-              <i class="fa fa-check-circle text-success"></i>
-              <i class="fa fa-plus ms-2"></i>
-              <i class="fa fa-ellipsis-v ms-2"></i>
-            </span>
-          </div>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <i class="fa fa-ellipsis-v"></i> Learning Objectives
-              <span class="float-end">
-                <i class="fa fa-check-circle text-success"></i>
-                <i class="fa fa-ellipsis-v ms-2"></i>
-              </span>
-            </li>
-
-            <li class="list-group-item">
-              <i class="fa fa-ellipsis-v"></i> Reading
-              <span class="float-end">
-                <i class="fa fa-check-circle text-success"></i>
-                <i class="fa fa-ellipsis-v ms-2"></i>
-              </span>
-            </li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          <div>
-            <i class="fa fa-ellipsis-v"></i> Week 2
-            <span class="float-end">
-              <i class="fa fa-check-circle text-success"></i>
-              <i class="fa fa-plus ms-2"></i>
-              <i class="fa fa-ellipsis-v ms-2"></i>
-            </span>
-          </div>
-
-          <ul class="list-group">
-            <li class="list-group-item">
-              <i class="fa fa-ellipsis-v"></i> Learning Objectives
-              <span class="float-end">
-                <i class="fa fa-check-circle text-success"></i>
-                <i class="fa fa-ellipsis-v ms-2"></i>
-              </span>
-            </li>
-
-            <li class="list-group-item">
-              <i class="fa fa-ellipsis-v"></i> Reading
-              <span class="float-end">
-                <i class="fa fa-check-circle text-success"></i>
-                <i class="fa fa-ellipsis-v ms-2"></i>
-              </span>
-            </li>
-        </li>
-      </ul>
-    </div>
-
-  </div>
-
-    <div class="flex-grow-0 me-2 d-none d-xl-block" style="width: 225px;">
-      <h2>Course Status</h2>
+    <div class="col ms-4 d-none d-xl-block" style="width: 225px;">
+      <h4>Course Status</h4>
 
       <div class="btn-group" role="group" style="padding-bottom: 10px;">
-        <button type="button" class="btn btn-outline-dark">Unpublish</button>
-        <button type="button" class="btn btn-outline-dark">Published</button>
+        <button type="button" class="btn btn-outline-dark"><i class="fa fa-times-circle-o" aria-hidden="true"></i> Unpublish</button>
+        <button type="button" class="btn btn-outline-dark" style="color: green;"><i class="fa fa-check-circle-o" style="color: green;"></i> Published</button>
       </div>
 
       <div class="btn-group-vertical" style="padding-bottom: 10px;">
-        <button type="button" class="btn btn-outline-secondary">Import Existing Content</button>
-        <button type="button" class="btn btn-outline-secondary">Import from Commons</button>
-        <button type="button" class="btn btn-outline-secondary">Choose Home Page</button>
-        <button type="button" class="btn btn-outline-secondary">View Course Stream</button>
-        <button type="button" class="btn btn-outline-secondary">New Announcement</button>
-        <button type="button" class="btn btn-outline-secondary">New Analytics</button>
-        <button type="button" class="btn btn-outline-secondary">View Course Notifications</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-sign-in" aria-hidden="true"></i> Import Existing Content</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-upload" aria-hidden="true"></i> Import from Commons</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullseye" aria-hidden="true"></i> Choose Home Page</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart" aria-hidden="true"></i> View Course Stream</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullhorn" aria-hidden="true"></i> New Announcement</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart" aria-hidden="true"></i> New Analytics</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bell-o" aria-hidden="true"></i> View Course Notifications</button>
+      </div>
+
+      <div style="padding-bottom: 15px;">
+        <h4>To Do</h4>
+        <hr>
+        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade A1</a>
+        <br/>
+        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade Quiz 1</a>
       </div>
 
       <div>
-        <h2>Coming Up</h2>
-        <a href="#" style="color: red;">View Calendar</a>
+        <h4>Coming Up</h4>
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <a href="#" style="color: red;"> View Calendar</a>
+        <hr>
         <ul class="wd-navigation">
-          <li><a href="#">Lecture CS4550 Sep 7 at 11:45am</a></li>
-          <li><a href="#">Lecture CS4550 Sep 11 at 11:45am</a></li>
+          <li>
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <a href="#">Lecture CS4550 Sep 7 at 11:45am</a>
+          </li>
+          <li>
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <a href="#">Lecture CS4550 Sep 11 at 11:45am</a>
+          </li>
         </ul>
       </div>
     </div>
