--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -6,7 +6,7 @@
     <body>
         <ul class="wd-navigation">
             <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-            <li class="wd-active"><a href="#">Modules</a></li>
+            <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
             <li><a href="http://piazza.com">Piazza</a></li>
             <li><a href="#">Zoom</a></li>
             <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
