--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -15,23 +15,21 @@
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
 
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        </button> -->
-
-        <a class="navbar-toggler" type="button" data-bs-toggle="collapse" href="#collapseExample" role="option"
-          aria-expanded="false" aria-controls="collapseExample">
+        <a class="navbar-toggler" type="button" data-bs-toggle="collapse" href="/Kanbas/Courses/Home/kanbasnav.html" role="option"
+          aria-expanded="false" aria-controls="navbarSupportedContent">
 
           <span class="navbar-toggler-icon"></span>
         </a>
 
         <a class="navbar-brand" href="#">Navbar</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggler="collapse"
-          data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="fa fa-chevron-down"></span>
-        </button>
+        <div class="float-end">
+          <a href="#"><i class="fa fa-binoculars" aria-hidden="true"
+              style="color: darkgray;"></i></a>
+          <a href="/Kanbas/Courses/Home/coursenav.html"><i class="fa fa-chevron-down" aria-hidden="true"
+              style="color: darkgray;"></i></a>
+      </div>
+
       </div>
     </nav>
 
