--- a/public/Kanbas/Dashboard/screen.html
+++ b/public/Kanbas/Dashboard/screen.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    <div class="row justify-content-start">
+    <div class="d-flex">
 
-        <div class="col-1">
+        <div class="float-start pe-4">
             <ul class="wd-kanbas-navigation">
                 <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon" /></a></li>
                 <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
@@ -26,7 +26,7 @@
             </ul>
         </div>
 
-        <div class="col-11">
+        <div class="d-flex">
             <div class="p-0">
                 <h1>Dashboard</h1>
                 <hr />
