--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
   </head>
   <body>
     
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
    
-
+<!-- 
     <h1>Welcome to Web Dev</h1>
 
     <ul>
@@ -39,6 +39,6 @@
       <li><a href="/labs/a2/index.html">Assignment 2</a></li>
       <li><a href="/labs/a3/index.html">Assignment 3</a></li>
       <li><a href="/Kanbas/Dashboard/screen.html">Kanbas</a></li>
-    </ul>
+    </ul> -->
   </body>
 </html>
